common css added

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,20 @@
 
 
 /* common css */
-.cnmPeragraph{
-  @apply text-base text-[#4D525F] leading-[150%] font-normal
+.cnmPeragraph {
+  @apply font-outfit font-normal text-sm leading-[145%] text-[#5A5F6D]
+  sm:text-base sm:leading-[150%]
+  md:text-[17px] md:leading-[155%]
+  lg:text-[18px] lg:leading-[160%]
+  xl:text-base xl:leading-[150%] xl:text-[#4D525F];
 }
 
+
+.cmnHeadingtwo {
+  @apply font-urbanist font-bold leading-[120%] text-[#01081B]
+  text-base       
+  sm:text-lg    
+  md:text-xl      
+  lg:text-[22px] 
+  xl:text-xl;     
+}
