nav & banner responsive done

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,19 @@
   lg:text-[22px] 
   xl:text-xl;     
 }
+
+
+
+/* banner css */
+.banner{
+  @apply lg:rounded-[10px] sm:rounded-[15px] md:rounded-[20px]   m-0   md:m-1 lg:m-2    xl:m-6  
+}
+.bannerTitle{
+  @apply xl:mt-[201px]  lg:mt-[170px] md:mt-[160px] sm:mt-[150px] mt-[140px] inline-block font-outfit lg:font-semibold font-medium text-base text-[#787878] leading-[150%] w-full uppercase text-center lg:text-left  
+}
+.bnnerhead{
+  @apply font-urbanist font-bold text-[30px] sm:text-[40px] md:text-[40px] lg:text-[50px] xl:text-[64px] text-[#01081B] leading-[120%] max-w-[300px] sm:max-w-[400px] md:max-w-[450px] lg:max-w-[500px] xl:max-w-[700px] mx-auto lg:mx-0  text-center lg:text-left  
+}
+.bannerText{
+  @apply mt-3 font-outfit text-lg text-[#4D525F] leading-[150%] max-w-[490px]   mx-auto lg:mx-0  text-center lg:text-left  
+}
