--- a/app/globals.css
+++ b/app/globals.css
@@ -65,5 +65,5 @@
 /* how to section */
  
 .getStartbtn{
-  @apply xl:py-4 lg:py-3 md:py-2 sm:py-2 py-1 xl:px-6 lg:px-5 md:px-4  px-3  h-fit leading-[150%] rounded-[30px] bg-[#2E68FD] text-white font-semibold xl:text-base lg:text-sm md:text-xs  text-xs  font-outfit mt-5 lg:mt-0 mx-auto lg:mx-0  
+  @apply lg:py-4 sm:py-2 py-1 lg:px-6   md:px-4  px-3  h-fit leading-[150%] rounded-[30px] bg-[#2E68FD] text-white font-semibold xl:text-base lg:text-sm md:text-xs  text-xs  font-outfit mt-5 lg:mt-0 mx-auto lg:mx-0  
 }
