--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,9 @@
 .getStartbtn{
   @apply lg:py-4 sm:py-2 py-1 lg:px-6   md:px-4  px-3  h-fit leading-[150%] rounded-[30px] bg-[#2E68FD] text-white font-semibold xl:text-base lg:text-sm md:text-xs  text-xs  font-outfit mt-5 lg:mt-0 mx-auto lg:mx-0  
 }
+
+
+/* KYC section */
+.kycbtn{
+  @apply  border border-gray-300 text-gray-700 font-semibold   bg-white/70 hover:bg-white hover:border-[#2E68FD] hover:shadow-md duration-300   py-3 px-6 h-fit leading-[150%] rounded-[25px]   hover:text-[#2E68FD]  text-base font-outfit  transition-all flex items-center gap-2
+}
